# projet3_scraping

./: .env  README.md  app.py  main.py  pyproject.toml
data/: TEST.db  sqlite_reviews_nickel.db
modules/: config.py  database.py  review_parser.py  scraper.py
