[project]
name = "projet3-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]
