[project]
name = "projet3-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "docker>=7.1.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
]
